--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,9 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.6.7",
     "react": "^18.2.0",
+    "react-circular-progressbar": "^2.2.0",
     "react-dom": "^18.2.0",
-    "axios": "^1.6.7"
+    "react-flow-renderer": "^10.3.17",
+    "react-router-dom": "^7.4.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.56",
